fix: fix Unit & Integration tests